Updated broken link

--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -131,7 +131,7 @@
         </li><!-- End Dashboard Nav -->
   
         <li class="nav-item">
-          <a class="nav-link collapsed" href="web3edi_live_teaching.html">
+          <a class="nav-link collapsed" href="instructor_live_teaching.html">
             <i class="bi bi-grid"></i>
             <span>Live Teaching</span>
           </a>
