--- a/ui/instructor_live_teaching.html
+++ b/ui/instructor_live_teaching.html
@@ -35,6 +35,19 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <script src="https://unpkg.com/ipfs-http-client-lite/dist/index.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/ethjs@0.3.4/dist/ethjs.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <!-- Web 3 -->
+
+  <script src="assets/abi/i_academy_box_abi.js"></script>
+  <script src="assets/abi/i_ab_course_abi.js"></script>
+  <script src="assets/abi/i_ab_school_abi.js"></script>
+  <script src="assets/abi/i_ab_course_instructor_abi.js"></script>
+  <script src="assets/abi/i_ab_student_dashboard_abi.js"></script>
+  <script src="assets/abi/i_ab_instructor_dashboard_abi.js"></script>
 </head>
 
 <body>
@@ -138,7 +151,7 @@
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="web3edi_live_teaching.html">
+        <a class="nav-link collapsed" href="instructor_live_teaching.html">
           <i class="bi bi-grid"></i>
           <span>Live Teaching</span>
         </a>
@@ -146,7 +159,7 @@
 
     </ul>
   </aside><!-- End Sidebar-->
-  
+
   <main id="main" class="main">
 
     <div class="pagetitle">
